public abstract class Shape {
    public String color;
    public boolean filled;

    public Shape(){

    }

    public Shape(String color, boolean filled){
        setColor(color);
        setFilled(filled);
    }

    public String getColor(){
        return this.color;
    }

    public void setColor(String color){
        this.color = color;
    }

    public boolean isFilled(){
        return this.filled;
    }

    public void setFilled(boolean filled){
        this.filled = filled;
    }

    public abstract double getArea();

    public abstract double getPerimeter();

    @Override
    public String toString() {
        return "Shape[color=" + getColor() + ", filled=" + isFilled() + "]";
    }
}
